cmake_minimum_required(VERSION 3.17)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(L1 LT_0001_two_sum.cpp)
add_executable(L2 LT_0002_add_two_numbers.cpp)
add_executable(L3 LT_0003_longest_substring_without_repeating_characters.cpp)
add_executable(L4 LT_0004_median_of_two_sorted_arrays.cpp)