cmake_minimum_required(VERSION 3.17)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(L1 LT_0001_two_sum.cpp)
add_executable(L2 LT_0002_add_two_numbers.cpp)
add_executable(L3 LT_0003_longest_substring_without_repeating_characters.cpp)
add_executable(L4 LT_0004_median_of_two_sorted_arrays.cpp)
add_executable(L5 LT_0005_longest_palindromic_substring.cpp)
add_executable(L6 LT_0006_zigzag_conversion.cpp)
add_executable(L10 LT_0010_regular_expression_matching.cpp)
add_executable(L11 LT_0011_container_with_most_water.cpp)
add_executable(L13 LT_0013_roman_to_integer.cpp)
add_executable(L14 LT_0014_longest_common_prefix.cpp)
add_executable(L15 LT_0015_3Sum.cpp)
add_executable(L20 LT_0020_valid_parentheses.cpp)
add_executable(L333 LT_0333_largest_BST_subtree.cpp)
add_executable(L787 LT_0787_cheapest_flights_within_k_stops.cpp)